--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
       align-items: center;
       justify-content: center; }
   #showcase h2 {
-    font-size: 50px;
+    font-size: 3.1rem;
     padding-bottom: 20px;
     margin: 0 auto; }
   #showcase p {
@@ -115,6 +115,38 @@
     line-height: 2em;
     font-size: 20px; }
 
+/* MEDIA QUERIES */
+@media screen and (max-width: 860px) {
+  #showcase h2 {
+    font-size: 2.5rem;
+    padding-bottom: 20px; }
+  #showcase p {
+    margin-bottom: 10px;
+    font-size: 1.25rem; } }
+@media screen and (max-width: 725px) {
+  #info {
+    display: block;
+    text-align: center; }
+
+  .info-list {
+    display: inline-block;
+    text-align: left;
+    margin: 2rem auto; } }
+@media screen and (max-width: 500px) {
+  .showcase-content {
+    padding: 15px; }
+
+  #showcase h2 {
+    font-size: 1.8rem;
+    padding-bottom: 15px; }
+  #showcase p {
+    margin-bottom: 5px;
+    font-size: 0.8rem; }
+
+  #info {
+    display: block; }
+    #info .info-image {
+      display: none; } }
 /*
     Created on : 2019-okt-27, 13:31:36
     Author     : Anders Str÷mberg
@@ -146,6 +178,120 @@
 #website-list {
   background: url("../img/keyboard.jpg") no-repeat center center; }
 
+/*Card specific*/
+.card {
+  width: 75%;
+  max-width: 800px;
+  height: 200px;
+  border-radius: 15px;
+  background-color: #CFD4C5;
+  margin: 1rem auto;
+  box-shadow: 10px 10px; }
+
+#education-list .container .card {
+  width: 65%;
+  height: 180px; }
+
+#job-list .container .card {
+  width: 65%;
+  height: 180px; }
+
+#website-list .container .card {
+  width: 80%;
+  height: 250px; }
+
+.card-header {
+  padding: 0.8rem; }
+  .card-header h3 {
+    color: #56a79a;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    margin-left: 0; }
+  .card-header span {
+    margin-left: 1rem; }
+
+.card-body {
+  line-height: 1.25;
+  padding: 0 1rem; }
+  .card-body p {
+    margin-left: 4.5rem;
+    padding-bottom: 2px; }
+
+.website .card-body {
+  line-height: 1.1;
+  padding: 0 0.5rem; }
+  .website .card-body p {
+    margin-left: 1.0rem;
+    padding-bottom: 2px; }
+
+.list-item h2 {
+  margin: 0 2rem;
+  color: #fdf5e6;
+  text-shadow: -1px 0 #56a79a, 0 1px #56a79a, 1px 0 #56a79a, 0 -1px #56a79a;
+  background: url(../img/open.png) no-repeat 0 14px;
+  background-size: 30px 30px;
+  font-weight: bold;
+  padding: 10px 0 0 50px;
+  cursor: pointer; }
+.list-item h2.close {
+  background-image: url(../img/close.png); }
+.list-item h2 span {
+  margin-left: 2rem; }
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 1175px) {
+  .card-body {
+    overflow-wrap: break-word; }
+    .card-body p {
+      font-size: 1rem; } }
+@media screen and (max-width: 1025px) {
+  .list-item h2 {
+    font-size: 1.5rem;
+    margin: 0 1rem;
+    background: url(../img/open.png) no-repeat 0 18px;
+    background-size: 25px 25px;
+    padding: 10px 0 0 40px; } }
+@media screen and (max-width: 975px) {
+  .card-header {
+    overflow-wrap: break-word; }
+
+  .card-body {
+    line-height: 1.1;
+    padding: 0 0.5rem; }
+    .card-body p {
+      margin-left: 1.0rem;
+      font-size: 1rem; } }
+@media screen and (max-width: 825px) {
+  .list-item h2 {
+    font-size: 1.3rem;
+    margin: 0 0.8rem;
+    background: url(../img/open.png) no-repeat 0 20px;
+    background-size: 20px 20px;
+    padding: 10px 0 0 25px; }
+  .list-item h2 span {
+    margin-left: 2rem; }
+
+  .card-header {
+    line-height: 1.1;
+    padding: 0.5rem; }
+    .card-header h3 {
+      font-size: 1.25rem; }
+
+  .card-body p {
+    font-size: 0.9rem; } }
+@media screen and (max-width: 700px) {
+  .list-item h2 {
+    font-size: 1.0rem;
+    margin: 0 0.5rem;
+    background: url(../img/open.png) no-repeat 0 22px;
+    background-size: 15px 15px; }
+  .list-item h2 span {
+    margin-left: 2rem; }
+
+  .card-header h3 {
+    font-size: 1.1rem; }
+
+  .card-body p {
+    font-size: 0.75rem; } }
 article {
   min-height: 100%;
   display: grid;
@@ -220,7 +366,7 @@ footer {
   line-height: 1.5; }
   .db-item-list ul {
     max-width: 60%;
-    margin: 0 auto 15rem auto;
+    margin: 0 auto 5rem auto;
     list-style: none;
     padding-top: 3.5rem; }
   .db-item-list li {
@@ -235,44 +381,42 @@ footer {
     background-color: #333;
     /* Modern Browsers */ }
 
-/*Card specific*/
-.card {
-  width: 75%;
-  max-width: 800px;
-  height: 200px;
-  border-radius: 15px;
-  background-color: #CFD4C5;
-  margin: 1rem auto;
-  box-shadow: 10px 10px; }
+/* MEDIA QUERIES */
+@media screen and (max-width: 980px) {
+  header h1 {
+    font-size: 2.0rem; }
 
-.card-header {
-  padding: 1rem; }
-  .card-header h3 {
-    color: #56a79a;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    margin-left: 0; }
-  .card-header span {
-    margin-left: 1rem; }
+  nav li, nav a {
+    font-size: 1.0rem; }
+  nav .nav-links li {
+    margin-right: 1.0rem; } }
+@media screen and (max-width: 860px) {
+  header {
+    display: block; }
+    header h1, header ul {
+      margin: 10px auto 5px auto;
+      text-align: center; } }
+@media screen and (max-width: 725px) {
+  footer {
+    display: block;
+    text-align: center; }
 
-.card-body {
-  line-height: 1.25;
-  padding: 0 1rem; }
-  .card-body p {
-    margin-left: 4.5rem;
-    padding-bottom: 2px; }
+  .contact {
+    display: inline-block;
+    text-align: left; }
 
-.list-item h2 {
-  margin: 0 2rem;
-  color: #fdf5e6;
-  text-shadow: -1px 0 #56a79a, 0 1px #56a79a, 1px 0 #56a79a, 0 -1px #56a79a;
-  background: url(../img/open.png) no-repeat 0 14px;
-  background-size: 30px 30px;
-  font-weight: bold;
-  padding: 10px 0 0 50px;
-  cursor: pointer; }
-.list-item h2.close {
-  background-image: url(../img/close.png); }
-.list-item h2 span {
-  margin-left: 2rem; }
+  .contact-item {
+    margin-bottom: 1rem; }
+
+  .contact-item:last-child {
+    margin-bottom: 0; } }
+@media screen and (max-width: 500px) {
+  header h1 {
+    font-size: 1.8rem; }
+
+  nav li, nav a {
+    font-size: 0.8rem; }
+  nav .nav-links li {
+    margin-right: 0.7rem; } }
 
 /*# sourceMappingURL=style.css.map */
