--- a/scss/_parts.scss
+++ b/scss/_parts.scss
@@ -43,3 +43,192 @@
 #website-list {
     background:url('../img/keyboard.jpg') no-repeat center center;
 }
+
+/*Card specific*/
+.card {
+    width: 75%;
+    max-width: 800px;
+    height: 200px;
+    border-radius: 15px;
+    background-color: $color_card_bg;
+    margin: 1rem auto;
+    box-shadow: 10px 10px;
+}
+
+#education-list .container .card {
+    width: 65%;
+    height: 180px;
+}
+
+#job-list .container .card {
+    width: 65%;
+    height: 180px;
+}
+
+#website-list .container .card {
+    width: 80%;
+    height: 250px;
+}
+
+.card-header {
+    padding: 0.8rem;
+    
+    h3 {
+	color: $color_card_header;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	margin-left: 0;
+    }
+
+    span {
+	margin-left: 1rem;
+    }
+    
+}
+
+.card-body {
+    line-height: 1.25;
+    padding: 0 1rem;
+    
+    p {
+	margin-left: 4.5rem;
+	padding-bottom: 2px;
+    }
+}
+
+
+.website {
+    .card-body {
+	line-height: 1.1;
+	padding: 0 0.5rem;
+
+	p {
+	    margin-left: 1.0rem;
+	    padding-bottom: 2px;
+	}
+    }
+}
+
+
+.list-item {
+    h2 {
+	margin: 0 2rem;
+	color: $color_list_font;
+	text-shadow: -1px 0 $primary_text, 0 1px $primary_text, 1px 0 $primary_text, 0 -1px $primary_text;
+	background: url(../img/open.png) no-repeat 0 14px;
+	background-size: 30px 30px;
+	font-weight: bold;
+	padding: 10px 0 0 50px;
+	cursor: pointer;
+    }
+        
+    h2.close {
+      background-image: url(../img/close.png);
+    }
+
+    
+    h2 span {
+	margin-left: 2rem;
+    }
+}
+
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 1175px) {
+    .card-body {
+	overflow-wrap: break-word;
+	
+	p {
+	    font-size: 1rem;
+	}
+    }
+
+}
+
+@media screen and (max-width: 1025px) {
+    .list-item {
+	h2 {
+	    font-size: 1.5rem;
+	    margin: 0 1rem;
+	    background: url(../img/open.png) no-repeat 0 18px;
+	    background-size: 25px 25px;
+	    padding: 10px 0 0 40px;
+	}
+    }
+}
+
+@media screen and (max-width: 975px) {
+    .card-header {
+	overflow-wrap: break-word;
+    }
+
+    .card-body {
+	line-height: 1.1;
+	padding: 0 0.5rem;
+
+	p {
+	    margin-left: 1.0rem;
+	    font-size: 1rem;
+	}
+    }
+}
+
+@media screen and (max-width: 825px) {
+    .list-item {
+	h2 {
+	    font-size: 1.3rem;
+	    margin: 0 0.8rem;
+	    background: url(../img/open.png) no-repeat 0 20px;
+	    background-size: 20px 20px;
+	    padding: 10px 0 0 25px;
+	}
+
+	h2 span {
+	    margin-left: 2rem;
+	}
+
+    }
+    
+    .card-header {
+	line-height: 1.1;
+	padding: 0.5rem;
+
+	h3 {
+	    font-size: 1.25rem;
+	}
+    }
+    
+    .card-body {
+	p {
+	    font-size: 0.9rem;
+	}
+    }
+
+}
+
+@media screen and (max-width: 700px) {
+    .list-item {
+	h2 {
+	    font-size: 1.0rem;
+	    margin: 0 0.5rem;
+	    background: url(../img/open.png) no-repeat 0 22px;
+	    background-size: 15px 15px;
+	}
+
+	h2 span {
+	    margin-left: 2rem;
+	}
+
+    }
+    
+    .card-header {
+	h3 {
+	    font-size: 1.1rem;
+	}
+    }
+    
+    .card-body {
+	p {
+	    font-size: 0.75rem;
+	}
+    }
+}
